# myip

./: .dir-locals.el  .gitignore  .travis.yml  HISTORY.md  LICENSE  LICENSE.md  MANIFEST.in  Makefile  NOTES.md  Pipfile  README.md  setup.cfg  setup.py  whatsmyip
.githooks/: Makefile  post-commit
src/whatsmyip/: ip.py  providers.py
src/whatsmyip/cli/: main.py
tests/whatsmyip/: test_ip.py  test_providers.py  test_version.py
tests/whatsmyip/cli/: test_main.py
tests/whatsmyip/cli/data/: stdout_help.txt
whatsmyip/: ip.py  providers.py
whatsmyip/cli/: main.py
