[metadata]
name = whatsmyip
version = attr: whatsmyip.__version__.__version__
description = A tool to find your public IP address.
long_description = file: README.rst, LICENSE
long_desciption_content_type = text/markdown
license = MIT
author = Therry van Neerven
author_email = mail@therryvanneerven.nl
python_requires = >=3.6.0
url = https://github.com/Ecno92/whatsmyip
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Utilities
    Environment :: Console

[options]
install_requires = dnspython
tests_require = pytest
include_package_data = True
zip_safe = False
packages = find:

[options.entry_points]
console_scripts =
                myip = whatsmyip.cli.main:main

[bdist_wheel]
python-tag = py36

[flake8]
exclude = .git
