# Documentation: https://setuptools.readthedocs.io/en/latest/setuptools.html
[metadata]
name = whatsmyip
version = attr: whatsmyip.__version__.__version__
description = A tool to find your public IP address.
long_description = file: README.md, LICENSE.md, HISTORY.md
long_description_content_type = text/markdown
license = MIT
author = Therry van Neerven
author_email = mail@therryvanneerven.nl
url = https://github.com/Ecno92/whatsmyip
platforms =
          win32
          linux
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Utilities
    Environment :: Console

[options]
python_requires = >=3.6.0
install_requires =
                 dnspython >= 1.15.0
                 requests >= 2.12.4
                 click >= 6.7
setup_requires =
               pytest-runner >= 2.12.1
tests_require =
              pytest >= 3.8.0
include_package_data = True
zip_safe = False
packages = find:
package_dir =
            = src

[options.packages.find]
where =
      src
exclude =
        tests

[options.entry_points]
console_scripts =
                myip = whatsmyip.cli.main:main

[bdist_wheel]
python-tag = py36,py37

[flake8]
exclude =
        .git
        .venv
        .eggs

[mypy]
cache_dir = tmp/.mypy_cache

[tool:pytest]
cache_dir = tmp/.pytest_cache

[aliases]
test=pytest